@@ -1,3 +1,10 @@
+2008-09-08  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
+
+	* pycvsanaly2/extensions/Metrics.py:
+
+	Make sure checkouts and updates don't fail and try again when they
+	do.
+	
 2008-09-04  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
 
 	* pycvsanaly2/CVSParser.py:
